--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,8 +37,8 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  color: #000;
-  background-color: #fff;
+  color: #000000;
+  background-color: #ffffff;
 }
 
 .container {
@@ -70,8 +70,7 @@ body {
 
 /* Header */
 .page-header .container {
-  background: linear-gradient(0deg, #ffe17f 94%,
-      rgba(255, 255, 255, 1) 94%);
+  background: linear-gradient(0deg, #ffe17f 94%, rgba(255, 255, 255, 1) 94%);
   padding: 0 60px 0 60px;
 }
 
@@ -119,9 +118,9 @@ body {
   font-size: 16px;
   line-height: 20px;
   color: #000000;
-  background: #FFE17F;
+  background: #ffe17f;
   padding: 10px 2px 10px 48px;
-  border: 2px solid #000;
+  border: 2px solid #000000;
   border-radius: 50px 0 0 50px;
   min-width: 359px;
   background-color: transparent;
@@ -178,7 +177,7 @@ body {
   color: #000000;
   background: #ffe17f;
   padding: 10px;
-  border: 2px solid #000;
+  border: 2px solid #000000;
   border-radius: 0 50px 50px 0;
   min-width: 161px;
   cursor: pointer;
@@ -205,11 +204,6 @@ body {
 .search-button:focus-visible::before {
   display: block;
   outline: none;
-}
-
-.search-button:hover {
-  color: #ffffff;
-  background-color: #000000;
 }
 
 .search-button:hover {
@@ -371,7 +365,7 @@ body {
   padding: 0 0 36px 0;
   visibility: hidden;
   width: 100%;
-  background: #FFE17F;
+  background: #ffe17f;
   margin-left: -60px;
   min-width: 1160px;
   position: relative;
@@ -426,6 +420,12 @@ body {
   justify-content: space-between;
   max-width: 471px;
   width: 100%;
+}
+
+.services-item {
+  position: relative;
+  display: block;
+  width: 160px;
 }
 
 .shop-services-item:nth-child(3) {
@@ -785,7 +785,6 @@ body {
   display: flex;
   flex-direction: column;
   padding: 167px 0 0 0;
-
 }
 
 .sliders-info-items {
@@ -990,7 +989,7 @@ body {
 }
 
 .products-item:hover .product-card {
-  background-color: #ffc700
+  background-color: #ffc700;
 }
 
 .products-item:active {
@@ -1043,7 +1042,7 @@ body {
 
 .products-item .smart-watch {
   display: block;
-  background-image: url(../images/catalog-navigation/smart-watch.svg);
+  background-image: url("../images/catalog-navigation/smart-watch.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -1127,16 +1126,10 @@ body {
 
 .services-list {
   list-style: none;
-  margin: 0 116px 0 0;
-  padding: 76px 7px 0 0;
+  padding: 76px 0 0 0;
   z-index: 0;
   flex-shrink: 0;
-}
-
-.services-item {
-  position: relative;
-  display: block;
-  max-width: 280px;
+  margin: 0;
 }
 
 .services-link {
@@ -1151,6 +1144,8 @@ body {
   color: #000000;
   display: block;
   padding-left: 21px;
+  min-height: 40px;
+  padding-top: 10px;
 }
 
 .services-link:hover::before {
@@ -1206,7 +1201,7 @@ body {
   right: 0;
   height: 8px;
   width: 160px;
-  background-color: #FFE17F;
+  background-color: #ffe17f;
 }
 
 .services-item-rectangle::after {
@@ -1214,17 +1209,17 @@ body {
   position: absolute;
   width: 7px;
   height: 319px;
-  right: -7px;
-  top: -149px;
+  right: -127px;
+  top: -139px;
   background-color: #000000;
 }
 
 .services-link-current {
-  position: relative;
   color: #ffe17f;
   background-color: #000000;
   padding: 9px 134px 11px 18px;
-  margin: 0;
+  width: 280px;
+  margin-right: 243px;
 }
 
 .services-link-current:focus {
@@ -1236,11 +1231,11 @@ body {
 }
 
 .services-item:not(:last-child) {
-  margin-bottom: 44px;
+  margin-bottom: 34px;
 }
 
 .services-item:nth-child(2) {
-  margin-bottom: 54px;
+  margin-bottom: 34px;
 }
 
 .services-container {
@@ -1263,6 +1258,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-left: 243px;
 }
 
 .delivery-title {
@@ -1610,7 +1606,7 @@ body {
 
 .button-newsletter:hover {
   background: #000000;
-  color: #FFFFFF;
+  color: #ffffff;
   border: 3px solid #000000;
 }
 
@@ -1916,8 +1912,8 @@ body {
   position: relative;
 }
 
-.tooltip-toggle:hover+.tooltip-text,
-.tooltip-toggle:focus+.tooltip-text {
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
   display: block;
 }
 
@@ -1944,6 +1940,11 @@ body {
   margin-right: 2px;
   border: none;
   background: #f0f0f0;
+  font-family: "Rubik", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 
@@ -2097,7 +2098,7 @@ body {
   line-height: 21px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -2209,8 +2210,7 @@ body {
 /* Catalog*/
 /* User-navigation*/
 .page-header .container-catalog {
-  background: linear-gradient(0deg, #ffe17f 91%,
-      rgba(255, 255, 255, 1) 91%);
+  background: linear-gradient(0deg, #ffe17f 91%, rgba(255, 255, 255, 1) 91%);
   padding: 0 60px 0 60px;
 }
 
@@ -2511,7 +2511,7 @@ body {
   border-radius: 3px;
 }
 
-.filter-input[type="checkbox"]:checked+.control-mark::before {
+.filter-input[type="checkbox"]:checked + .control-mark::before {
   background-image: url("../images/decor/cheked.svg");
   background-repeat: no-repeat;
   background-size: 10px 10px;
@@ -2524,7 +2524,7 @@ body {
   top: 3px;
 }
 
-.filter-input[type="checkbox"]:checked+.control-mark {
+.filter-input[type="checkbox"]:checked + .control-mark {
   border: 2px solid #000000;
 }
 
@@ -2538,11 +2538,11 @@ body {
   border-radius: 50%;
 }
 
-.filter-input[type="radio"]:checked+.radio-mark {
+.filter-input[type="radio"]:checked + .radio-mark {
   border: 2px solid #000000;
 }
 
-.filter-input[type="radio"]:checked+.radio-mark::before {
+.filter-input[type="radio"]:checked + .radio-mark::before {
   background-position: center;
   position: absolute;
   content: "";
@@ -2576,8 +2576,8 @@ body {
   margin-left: 63px;
 }
 
-.filter-input:disabled~.control-mark,
-.filter-input:disabled~.control-label {
+.filter-input:disabled ~ .control-mark,
+.filter-input:disabled ~ .control-label {
   opacity: 0.1;
 }
 
@@ -2597,6 +2597,7 @@ body {
 .filter-sort {
   border: none;
   padding: 0;
+  cursor: pointer;
 }
 
 .filter-sort-up {
@@ -2688,10 +2689,25 @@ body {
   outline: none;
 }
 
+.product-link-item-new {
+  position: relative;
+}
+
+.product-link-item-new::after {
+  content: "";
+  position: absolute;
+  background-image: url("../images/catalog/decor-catalog/new-product.png");
+  top: 6%;
+  left: 76%;
+  width: 60px;
+  height: 60px;
+  background-repeat: no-repeat;
+}
+
 .goods-title-price {
   display: flex;
   margin-top: 32px;
-  font-family: 'Rubik';
+  font-family: "Rubik", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -2830,6 +2846,10 @@ body {
   outline: 2px solid #af4fff;
 }
 
+.catalog-item:hover .product-link-item::after {
+  opacity: 0.6;
+}
+
 .goods-card-button:hover {
   border: 3px solid #000000;
 }
@@ -2871,6 +2891,10 @@ body {
   flex-direction: column;
 }
 
+.pagination-container-item {
+  text-align: center;
+}
+
 .pagination-container {
   display: flex;
   justify-content: space-between;
@@ -2885,8 +2909,8 @@ body {
   padding: 0;
   margin: 0;
   min-width: 200px;
-  padding-left: 17px;
   flex-wrap: wrap;
+  margin-left: 19px;
 }
 
 .pagination-back {
@@ -2943,12 +2967,12 @@ body {
 .pagination-link {
   display: block;
   box-sizing: border-box;
-  min-width: 40px;
   min-height: 40px;
-  padding: 5px;
   font-size: 16px;
   color: rgba(68, 68, 68, 0.3);
   text-decoration: none;
+  padding: 7px;
+  margin-right: 15px;
 }
 
 .pagination-link-current {
